--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,17 @@
             <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>dev.anhcraft</groupId>
+            <artifactId>battle.spigot.api</artifactId>
+            <version>1.1.7</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>dev.anhcraft</groupId>
+            <artifactId>craftkit.spigot</artifactId>
+            <version>1.1.4</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
