--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>dev.anhcraft</groupId>
     <artifactId>bwpack</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <packaging>jar</packaging>
 
     <name>BedwarPack</name>
 
-    <description>Enhanced Bedwar package for Battle</description>
+    <description>Enhanced BedWars package for Battle</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>dev.anhcraft</groupId>
             <artifactId>battle.spigot.api</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
