--- a/pom.xml
+++ b/pom.xml
@@ -77,8 +77,8 @@
 
     <repositories>
         <repository>
-            <id>anhcraft-repo</id>
-            <url>https://repo.anhcraft.dev/repository/mvn/</url>
+            <id>mcvn-repo</id>
+            <url>https://repo.minecraftvn.net/repository/maven-public/</url>
         </repository>
         <repository>
             <id>spigot-repo</id>
@@ -108,13 +108,13 @@
         <dependency>
             <groupId>dev.anhcraft</groupId>
             <artifactId>battle.spigot.api</artifactId>
-            <version>1.2.4</version>
+            <version>1.2.5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>dev.anhcraft</groupId>
             <artifactId>craftkit.spigot</artifactId>
-            <version>1.1.9</version>
+            <version>1.2.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
