--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
                             <shadedPattern>dev.anhcraft.craftkit.acf</shadedPattern>
                         </relocation>
                         <relocation>
-                            <pattern>dev.anhcraft.confighelper</pattern>
+                            <pattern>dev.anhcraft.config</pattern>
                             <shadedPattern>dev.anhcraft.craftkit.helpers.config</shadedPattern>
                         </relocation>
                         <relocation>
