--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,27 @@
                     <relocations>
                         <relocation>
                             <pattern>co.aikar.commands</pattern>
-                            <shadedPattern>dev.anhcraft.craftkit.acf</shadedPattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.acf</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>dev.anhcraft.config</pattern>
-                            <shadedPattern>dev.anhcraft.craftkit.helpers.config</shadedPattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.config</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>dev.anhcraft.inst</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.inst</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.zaxxer.hikari</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.hikari</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>net.objecthunter.exp4j</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.exp4j</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.slf4j</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.slf4j</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>org.intellij.lang.annotations</pattern>
@@ -51,6 +67,22 @@
                         <relocation>
                             <pattern>org.jetbrains.annotations</pattern>
                             <shadedPattern>dev.anhcraft.battle.ext.annotations</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.bstats</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>io.papermc.lib</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.paperlib</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>de.tr7zw</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.tr7zw</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>javassist</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.javassist</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -104,13 +136,7 @@
         <dependency>
             <groupId>dev.anhcraft</groupId>
             <artifactId>battle.spigot-api</artifactId>
-            <version>1.2.8</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>dev.anhcraft</groupId>
-            <artifactId>craftkit.spigot</artifactId>
-            <version>1.2.4.2</version>
+            <version>1.3.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
