--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
                     <finalName>${project.name}</finalName>
                     <relocations>
                         <relocation>
+                            <pattern>dev.anhcraft.jvmkit</pattern>
+                            <shadedPattern>dev.anhcraft.battle.ext.jvmkit</shadedPattern>
+                        </relocation>
+                        <relocation>
                             <pattern>co.aikar.commands</pattern>
                             <shadedPattern>dev.anhcraft.battle.ext.acf</shadedPattern>
                         </relocation>
